// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Links block renders correctly 1`] = `
<jest>
  <div
    class="bg-light px-4 py-3 rounded-2"
  >
    <h2
      class="bcl-heading fw-bold mb-4"
    >
      More information
    </h2>
    <ul
      class="ps-0 mb-0"
    >
      <li
        class="list-unstyled me-4-5"
      >
        <a
          class="pb-3 d-inline-block standalone"
          href="/example.html"
        >
          European Commission
        </a>
      </li>
      <li
        class="list-unstyled me-4-5"
      >
        <a
          class="pb-3 d-inline-block standalone"
          href="/example.html"
        >
          Priorities
        </a>
      </li>
      <li
        class="list-unstyled"
      >
        <a
          class="pb-3 d-inline-block standalone"
          href="/example.html"
        >
          Jobs, Growth and Investment
        </a>
      </li>
    </ul>
  </div>
</jest>
`;

exports[`OE - Links block renders correctly with horizontal 1`] = `
<jest>
  <div
    class="bg-light px-4 py-3 rounded-2"
  >
    <h2
      class="bcl-heading fw-bold mb-4"
    >
      More information
    </h2>
    <ul
      class="ps-0 mb-0"
    >
      <li
        class="list-unstyled me-4-5"
      >
        <a
          class="pb-3 d-inline-block standalone"
          href="/example.html"
        >
          European Commission
        </a>
      </li>
      <li
        class="list-unstyled me-4-5"
      >
        <a
          class="pb-3 d-inline-block standalone"
          href="/example.html"
        >
          Priorities
        </a>
      </li>
      <li
        class="list-unstyled"
      >
        <a
          class="pb-3 d-inline-block standalone"
          href="/example.html"
        >
          Jobs, Growth and Investment
        </a>
      </li>
    </ul>
  </div>
</jest>
`;

exports[`OE - Links block renders correctly with horizontal and with title 1`] = `
<jest>
  <div
    class="bg-light px-4 py-3 rounded-2"
  >
    <h6
      class="bcl-heading fw-bold mb-4"
    >
      Links block test title
    </h6>
    <ul
      class="ps-0 mb-0"
    >
      <li
        class="list-unstyled me-4-5"
      >
        <a
          class="pb-3 d-inline-block standalone"
          href="/example.html"
        >
          European Commission
        </a>
      </li>
      <li
        class="list-unstyled me-4-5"
      >
        <a
          class="pb-3 d-inline-block standalone"
          href="/example.html"
        >
          Priorities
        </a>
      </li>
      <li
        class="list-unstyled"
      >
        <a
          class="pb-3 d-inline-block standalone"
          href="/example.html"
        >
          Jobs, Growth and Investment
        </a>
      </li>
    </ul>
  </div>
</jest>
`;

exports[`OE - Links block renders correctly with title 1`] = `
<jest>
  <div
    class="bg-light px-4 py-3 rounded-2"
  >
    <h6
      class="bcl-heading fw-bold mb-4"
    >
      Links block test title
    </h6>
    <ul
      class="ps-0 mb-0"
    >
      <li
        class="list-unstyled me-4-5"
      >
        <a
          class="pb-3 d-inline-block standalone"
          href="/example.html"
        >
          European Commission
        </a>
      </li>
      <li
        class="list-unstyled me-4-5"
      >
        <a
          class="pb-3 d-inline-block standalone"
          href="/example.html"
        >
          Priorities
        </a>
      </li>
      <li
        class="list-unstyled"
      >
        <a
          class="pb-3 d-inline-block standalone"
          href="/example.html"
        >
          Jobs, Growth and Investment
        </a>
      </li>
    </ul>
  </div>
</jest>
`;

exports[`OE - Links block renders correctly with transparent background 1`] = `
<jest>
  <div
    class="bg-light px-4 py-3 rounded-2"
  >
    <h2
      class="bcl-heading fw-bold mb-4"
    >
      More information
    </h2>
    <ul
      class="ps-0 mb-0"
    >
      <li
        class="list-unstyled me-4-5"
      >
        <a
          class="pb-3 d-inline-block standalone"
          href="/example.html"
        >
          European Commission
        </a>
      </li>
      <li
        class="list-unstyled me-4-5"
      >
        <a
          class="pb-3 d-inline-block standalone"
          href="/example.html"
        >
          Priorities
        </a>
      </li>
      <li
        class="list-unstyled"
      >
        <a
          class="pb-3 d-inline-block standalone"
          href="/example.html"
        >
          Jobs, Growth and Investment
        </a>
      </li>
    </ul>
  </div>
</jest>
`;

exports[`OE - Links block renders correctly with transparent background and with title 1`] = `
<jest>
  <div
    class="bg-light px-4 py-3 rounded-2"
  >
    <h6
      class="bcl-heading fw-bold mb-4"
    >
      Links block test title
    </h6>
    <ul
      class="ps-0 mb-0"
    >
      <li
        class="list-unstyled me-4-5"
      >
        <a
          class="pb-3 d-inline-block standalone"
          href="/example.html"
        >
          European Commission
        </a>
      </li>
      <li
        class="list-unstyled me-4-5"
      >
        <a
          class="pb-3 d-inline-block standalone"
          href="/example.html"
        >
          Priorities
        </a>
      </li>
      <li
        class="list-unstyled"
      >
        <a
          class="pb-3 d-inline-block standalone"
          href="/example.html"
        >
          Jobs, Growth and Investment
        </a>
      </li>
    </ul>
  </div>
</jest>
`;
